--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "postcss": "^8.5.6",
